--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -697,6 +697,7 @@ ar:
   you_followed_word: "لقد تابعت هذه الكلمة من قبل"
   resend_confirmation: "إعادة إرسال تعليمات التفعيل"
   send: "ارسل "
+  no_cat: "بدون فئات"
   hello: "مرحبا"
   confirm_body: " يمكنك تأكيد حساب البريد الإلكتروني الخاص بك من خلال الرابط"
   confirm_button: "تفعيل الحساب"
