[#198][#199][finished] handling loading

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -420,9 +420,9 @@ ar:
   highest_score: "أعلى نقاط"
   trophies: "الجوائز"
   no_trophies_won: "لا يوجد جوائز"
-  not_connected_to_twitter: "أنت غير متصل بتويتر، يمكنك التواصل عبر تغيير البيانات"
-  not_connected_to_facebook: "أنت غير متصل بفيس بوك، يمكنك التواصل عبر تغيير البيانات"
-  loading: "جاري التحميل"
+  not_connected_to_twitter: "أنت غير متصل بتويتر، يمكنك التواصل عبر "
+  not_connected_to_facebook: "أنت غير متصل بفيس بوك، يمكنك التواصل عبر "
+  loading: "جاري التحميل، برجاء الانتظار"
   Email_dont: "هذا البريد الالكتروني غير صحيح"
   Email_for_a_gamer: "هذا البريد الالكتروني ليس لمطور"
   you_cant_share_with_yourself: "لا يمكنك مشاركة هذا المشروع مع نفسك"
