--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -379,9 +379,9 @@ en:
   highest_score: "Highest Score"
   trophies: "Trophies"
   no_trophies_won: "No Trophies"
-  not_connected_to_twitter: "You are not connected to Twitter, connect from your settings"
-  not_connected_to_facebook: "You are not connected to Facebook, connect from your settings"
-  loading: "Loading"
+  not_connected_to_twitter: "You are not connected to Twitter, connect from your "
+  not_connected_to_facebook: "You are not connected to Facebook, connect from your "
+  loading: "Loading, please wait"
   won_trophies_title: "Earned Trophies"
   not_won_trophies_title: "Available Trophies"
   no_trophies: "Oh oh! It seems that you haven't played the game enough and you still haven't won any trophies! Go Play now!"
