--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -1,5 +1,5 @@
 ar:
-  request_button: "إذهب"
+  request_button: "إضغط هنا"
   posting_success: "لقد شاركت نقاطك على فيسبوك"
   post_on_fb: "لقد حصلت على "
   post_on_fb_2: " نقطة في عربيلتي على http://localhost:3000/"
