--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -324,6 +324,8 @@ en:
         maxAge: 'The maximum age'
         categories: "Categories"
         description: "Description"
+      keyword:
+        name: "Word"
     models:
       developer: "Developer"
     errors:
@@ -338,9 +340,9 @@ en:
         keyword:
           attributes:
             name:
-              blank: "word cant be empty"
-              invalid: "The word can only consist of only english and arabic characters"
-              taken: "This word already exists in the database"
+              blank: "cant be empty"
+              invalid: "can only consist of only english and arabic characters"
+              taken: "already exists in the database"
         category:
           attributes:
             name:
