added some more images

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -203,9 +203,6 @@ ar:
     failure:
       gamer:
         invalid: "لقد ادخلت بيانات غير صحيحة، يرجى إعادة المحاولة "
-<<<<<<< HEAD
-=======
->>>>>>> b6d1fff933e79efb142f548798890d91cba2e1f6
   controller:
     my_subscription:
         flash_messages:
@@ -518,8 +515,11 @@ ar:
   you_have_prizes: "لقد ربحت الجوائز التالية"
   sub_changed: "لقد غيرت نظامك "
   caro1h: "عربيليتي"
-  caro1b: "موقع سهل الاستعمال لمساعدة مطوري البرامج الناطقين باللغة العربية والغير ناطقين بها لترجمة مواقعهم بسهولة"
+  caro1b: "موقع سهل الاستخدام لمساعدة مطوري البرامج الناطقين باللغة العربية والغير ناطقين بها لترجمة مواقعهم بسهولة"
+  caro2h: "مشاريع"
+  caro2b: "منطقة عمل حيث يمكنك اضافة كلمات, استيراد ملف, تصدير الكلمات و معانيها لزملاءك."
   more: "معرفة المزيد"
+  moredevelopers: "ذهاب إلى صفحة المشاريع"
   feat1h: "إلعب"
   feat1b: "ساعدنا و ساهم معنا باللعب لتطوير قاعدة البيانات."
   feat2h: "إنشاء حساب"
