--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -460,7 +460,10 @@ en:
   sub_changed: "Subscription model changed "
   caro1h: "Arabilty"
   caro1b: "An easy to use, crowdsourced tool to help both native and non-native Arabic speaking developers easily find the best translations for their websites."
+  caro2h: "﻿Projects"
+  caro2b: "A workspace where you can add words, import a csv file, export these keywords and synonyms to any format you want and share with your collagues."
   more: "learn more"
+  moredevelopers: "Go to projects page"
   feat1h: "Play"
   feat1b: "Help us out and contribute to our crowdsourced database by playing our game!"
   feat2h: "Sign up"
