[Fixing] Fixed dropdown style in show view

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -703,7 +703,7 @@ ar:
   vote: "اصوات"
   congrats_you_won: "مبروك لقد ربحت "
   enter_word_first: "ادخل كلمة اولآ"
-  Synonym_already_there: "هذة الكلمة موجودة فس المشروع بالمعني الذي اخترته"
+  Synonym_already_there: "هذة الكلمة موجودة فى المشروع بالمعني الذي اخترته"
   activerecord:
     models:
       developer: "مطور"
