--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -455,7 +455,7 @@ ar:
   oops_error_fb: "واجهتنا مشاكل حين حولنا التواصل مع فيسبوك من فضلك حاول التواصل مرة أخرى"
   already_connected_fb: "لقد قمت بتسجيل الدخول من قبل و حسابك متصل بفيسبوك بالفعل"
   errors_prohibited: "اخطاء منعتك من التسجيل"
-  sign_up_e_acc: "سجل بحساب اخر"
+  sign_up_e_acc: "سجل  في عربيليتي بحساب من موقع اجتماعي"
   continue_reg_fb: "لقد اعطانا فيسبوك بعض المعلومات. من فضلك املأ الفراغات لتكملة التسجيل"
   won_trophies_title: "الانجازات التي تم اكمالها"
   not_won_trophies_title: "الانجازات التي بامكانك اكمالها "
