fixed arabic text

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -534,7 +534,7 @@ ar:
   featdevh1: "قاعدة بيانات يعتمد عليها."
   featdevb1: "مع قاعدة بيانات تتميز بالمرونة فالترجمة و مصنفة حسب السن و البلد و النوع يستطيع المطورون أن يجدوا بسهولة الترجمة المناسبة لأسواقهم المستهدفة."
   featdevh2: "مشاريع تسهل حياتك."
-  featdevb2: "المطورون يستطيعوا أن ينشئوا مشاريع تجمع كلمات ذات هدف مترابط. و يمكن للمشروع بسهولة اند يصدر أو يستورد أو يشارك مع المطورين الأخرين بدغضة زر."
+  featdevb2: "المطورون يستطيعوا أن ينشئوا مشاريع تجمع كلمات ذات هدف مترابط. و يمكن للمشروع بسهولة و يصدر أو يستورد أو يشارك مع المطورين الأخرين بضغطة زر."
   featgameh1: "لعبة ذات هدف."
   featgameb1: "المستخدمين يمكنهم اللعب والمساهمة في بناء قاعدة البيانات. "
   featgameh2: "شارك و نافس."
