removed option to enter empty data in gamer and guest forms, added translations, removed error in subscription choosing view

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -712,6 +712,7 @@ ar:
   congrats_you_won: "مبروك لقد ربحت "
   enter_word_first: "ادخل كلمة اولآ"
   Synonym_already_there: "هذة الكلمة موجودة فى المشروع بالمعني الذي اخترته"
+  signed_up_but_unconfirmed: "تم إرسال رسالة تحتوي على رابط تأكيد إلى بريدك الإلكتروني. يرجى فتح الرابط لتفعيل حسابك."
   activerecord:
     models:
       developer: "مطور"
