--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -646,6 +646,7 @@ en:
   enter_a_synonym: "enter new translation"
   formal_or_slang: "<p style='font-size:20px;'><button class='btn btn-primary' id='formal_button' onclick='choose_formal_and_vote()'>formal</button>&nbsp or &nbsp<button class='btn btn-primary' id='slang_button' onclick='choose_slang_and_vote()'>slang</button></p>"
   report_game: "report"
+  signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please open the link to activate your account."
   activerecord:
     attributes:
       keyword:
